# interne

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  next.config.js  package-lock.json  package.json  tailwind.config.js
.github/workflows/: deploy.yml
backend/: .gitignore  config.json
backend/migrations/: 001_create_entries.sql
components/: About.js  CreateEntryForm.js  CreateEntryForm.tsx  Footer.js  Footer.tsx  Forms.js  Forms.tsx  Header.js  Header.tsx
docs/plans/: 2025-02-15-interne-rebuild-design.md  2025-02-15-interne-rebuild.md  2025-12-06-interne-refactor-design.md  2025-12-06-interne-refactor.md  2026-02-16-custom-form-validation.md  2026-02-16-entry-filter-bar.md  2026-02-16-medium-fixes.md  2026-02-16-tags-view-design.md  2026-02-16-testing-implementation.md  2026-02-16-testing-strategy-design.md  (+6 more)
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
migrations/: 001_initial.sql  002_timestamps.sql
pages/: _app.js  _app.tsx  about.js  data.js  data.tsx  index.js  index.tsx  options.tsx
scripts/: setup-pocketbase.md
services/: formatters.js  storage.js  storage.ts  sync.js
src/: auth.rs  cli.rs  db.rs  error.rs  lib.rs  main.rs
static/: style.css
styles/: Footer.module.css  Forms.module.css  Header.module.css  Home.module.css  Index.module.css  Pages.module.css  globals.css
templates/: base.html  login.html
tests/: auth.rs  collections.rs  entries.rs  export.rs  tags.rs
utils/: constants.js  constants.ts  date.js  entropy.js  formatters.ts  hooks.js
(+46 files in other folders)
